force-app/zurich-base/main/default/objects/EmailMessage/fields/GenesysFlowID__c.field-meta.xml
<CustomField>
    <fullName>GenesysFlowID__c</fullName>
    <description>Identificador de Genesys del flujo asociado a la cola (si lo hubiera).</description>
    <label>Genesys Flow ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>