force-app/zurich-base/main/default/objects/EmailMessage/fields/GenesysInteractionId__c.field-meta.xml
<CustomField>
    <fullName>GenesysInteractionId__c</fullName>
    <description>Id. de interacción en Genesys Cloud. Se permite vacío ya que no todos los Email se enrutarán en Genesys Cloud</description>
    <externalId>true</externalId>
    <label>Genesys Interaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>