force-app/zurich-base/main/default/objects/EmailMessage/fields/GenesysPreferredOwner__c.field-meta.xml
<CustomField>
    <fullName>GenesysPreferredOwner__c</fullName>
    <description>Email del gestor preferente para atender la interacción</description>
    <label>Genesys Preferred Owner</label>
    <type>Email</type>
</CustomField>