force-app/zurich-base/main/default/objects/EmailMessage/fields/GenesysQueueName__c.field-meta.xml
<CustomField>
    <fullName>GenesysQueueName__c</fullName>
    <description>Contiene el nombre de la cola de Genesys a la que se ha enrutado la interacción.</description>
    <label>Genesys Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>