force-app/zurich-base/main/default/objects/EmailMessage/fields/IsUrgent__c.field-meta.xml
<CustomField>
    <fullName>IsUrgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[ZDA] Checkbox que nos indica si un email que ha entrado es urgente o no. Se utiliza para establecer la prioridad de la interacción</description>
    <label>Is Urgent</label>
    <type>Checkbox</type>
</CustomField>