force-app/zurich-base/main/default/objects/EmailMessage/fields/RoutedToGenesys__c.field-meta.xml
<CustomField>
    <fullName>RoutedToGenesys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el email se ha enviado a Genesys de forma satisfactoria</description>
    <label>Routed to Genesys</label>
    <type>Checkbox</type>
</CustomField>