force-app/zurich-base/main/default/objects/EmailMessage/validationRules/EmailSizeControl.validationRule-meta.xml
<ValidationRule>
    <fullName>EmailSizeControl</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(HtmlBody)&gt;=131072 &amp;&amp; $Permission.USPTriggerCaseValidationRules
&amp;&amp;  Incoming=false</errorConditionFormula>
    <errorMessage>[VR EmailMessage] Este email supera su tamaño máximo. Reduce contenido innecesario</errorMessage>
</ValidationRule>